<resources>
    <string name="app_name">体重管理器</string>
    <string name="add_weight">记录体重</string>
    <string name="look_weight">查看记录</string>
    <string name="result">称量结果</string>
    <string name="title">小土豆的体重记录仪</string>
    <string name="user">个人信息</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="userMsg">用户个人信息</string>
    <string name="name">姓名</string>
    <string name="height">身高</string>
    <string name="save">修改</string>
    <string name="weight">体重：</string>
    <string name="date">日期：</string>
    <string name="chooseUser">选择用户</string>
    <string name="dialog_title">请选择用户</string>
    <string name="dismiss">取消</string>
    <string name="bmi">BMI</string>
    <string name="updateUser">修改用户</string>
    <string name="update_weight_value">请输入体重</string>
    <string name="ok">确定</string>
</resources>
