<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/center"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.gank.mybodymanage.MainActivity">


    <TextView
        android:id="@+id/main_title"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="100dp"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/title"
        android:textColor="@android:color/black"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/result"
        android:inputType="numberDecimal"
        android:maxLines="1"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="112dp" />

    <Button
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:onClick="addWeight"
        android:text="@string/add_weight" />

    <Button
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:onClick="lookWeight"
        android:text="@string/look_weight" />

    <Button
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:onClick="userMsg"
        android:text="@string/user" />


</LinearLayout>
