<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/updateUser"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/update_weight"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:hint="@string/update_weight_value" />


    <Button
        android:id="@+id/dialog_bt_ok"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/ok" />

</LinearLayout>