<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/center"
    tools:context="com.gank.mybodymanage.UserActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/userMsg"
        android:textColor="@android:color/black"
        android:textSize="30sp" />

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/title"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <EditText
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/name"
            android:inputType="text"
            android:maxLines="1"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/userHeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/height"
            android:inputType="number"
            android:maxLines="1"
            tools:ignore="MissingConstraints" />

        <Button
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:onClick="save"
            android:text="@string/save" />

    </LinearLayout>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@android:drawable/ic_input_add" />

</RelativeLayout>
